--- a/Index.html
+++ b/Index.html
@@ -39,14 +39,14 @@
     <section class="projects">
         <h2>Mes projets</h2>
         <div class="project-grid">
-            <a href="Vales.html">
+            <a href="Projet1/Vales.html">
                 <div class="project-box" style="background-image: url('IMG/vls.png');"></div>
             </a>
-            <a href="page2.html">
-                <div class="project-box" style="background-image: url('');"></div>
+            <a href="Projet2/index.html">
+                <div class="project-box" style="background-image: url('IMG/ART.png');">ART</div>
             </a>
-            <a href="page3.html">
-                <div class="project-box" style="background-image: url('');"></div>
+            <a href="Projet3/index.html">
+                <div class="project-box" style="background-image: url('IMG/PFC.PNG');"> </div>
             </a>
             <a href="page4.html">
                 <div class="project-box" style="background-image: url('');"></div>
@@ -54,8 +54,8 @@
             <a href="page5.html">
                 <div class="project-box" style="background-image: url('');"></div>
             </a>
-            <a href="DemoHTML/index.html">
-                <div class="project-box" style="background-image: url('IMG/cv.png');"></div>
+            <a href="Projet6/">
+                <div class="project-box" style="background-image: url('IMG/cv.png');">CV</div>
             </a>
         </div>        
     </section>
