--- a/Projet1/Vales.html
+++ b/Projet1/Vales.html
@@ -12,13 +12,13 @@
 
         <button class="nav-button prev">&lt;</button>
         <div class="carousel">
-            <img src="1.png" alt="Slide 1">
-            <img src="2.png" alt="Slide 2">
-            <img src="3.png" alt="Slide 3">
-            <img src="5.png" alt="Slide 5">
-            <img src="6.png" alt="Slide 6">
-            <img src="7.png" alt="Slide 7">
-            <img src="9.png" alt="Slide 9">
+            <img src="IMG Vales/1.png" alt="Slide 1">
+            <img src="IMG Vales/2.png" alt="Slide 2">
+            <img src="IMG Vales/3.png" alt="Slide 3">
+            <img src="IMG Vales/5.png" alt="Slide 5">
+            <img src="IMG Vales/6.png" alt="Slide 6">
+            <img src="IMG Vales/7.png" alt="Slide 7">
+            <img src="IMG Vales/9.png" alt="Slide 9">
         </div>
         <button class="nav-button next">&gt;</button>
     </div>
