--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Projet Léo Bleibel</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a04a2d3c0d.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="IMG/photo leo.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/icn.png" type="image/x-icon">
 </head>
 <body>
     <header>
