--- a/Projet1/Vales.html
+++ b/Projet1/Vales.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrousel</title>
+    <title>Vales Official</title>
     <link rel="stylesheet" href="Vales.css">
+    <link rel="shortcut icon" href="IMG Vales/icn.png" type="image/x-icon">
 </head>
 <body>
     <div class="carousel-container">
