--- a/Index.html
+++ b/Index.html
@@ -47,8 +47,8 @@
             <a href="Projet3/index.html">
                 <div class="project-box" style="background-image: url('IMG/PFC.PNG');"> </div>
             </a>
-            <a href="page4.html">
-                <div class="project-box" style="background-image: url('');"></div>
+            <a href="Projet4/index.html">
+                <div class="project-box" style="background-image: url('IMG/IBZ.jpeg');">IBIZA 2024</div>
             </a>
             <a href="page5.html">
                 <div class="project-box" style="background-image: url('');"></div>
