--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="social-icons">
-            <a href="https://www.instagram.com/" target="_blank" aria-label="instagram"><span class="fa-brands fa-instagram"></span></a>
+            <a href="https://www.instagram.com/m2z.92/" target="_blank" aria-label="instagram"><span class="fa-brands fa-instagram"></span></a>
             <a href="https://www.facebook.com/m2z.92/" target="_blank" aria-label="Facebook"><span class="fa-brands fa-facebook"></span></a>
             <a href="https://www.linkedin.com/in/leo-bleibel-15b5082b0/" target="_blank" aria-label="linkedin"><span class="fa-brands fa-linkedin"></span></a>
         </div>
